@@ -1,3 +1,11 @@
+2018-02-19  Greg Wolfe  <gregory.wolfe@kodakalaris.com>
+
+	* coders/svg.c (SVGStartElement): Fixed initialization of
+	x and y attributes per the SVG spec:  for graphical elements
+	"image", "pattern", "text", "rect", and "use", if the x or y
+	attribute is not specified, the effect is as if a value of
+	"0" were specified.
+	
 2018-02-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* coders/sun.c (ReadSUNImage): Fix edge case which broke file-size
